<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg3"
    android:padding="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="254dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/todo">

        </ImageView>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxBackgroundMode="outline"
            app:helperText="Enter Email Here."
            app:counterEnabled="true"
            app:counterMaxLength="60"
            android:textColorHint="@color/green"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/email"
                android:inputType="textEmailSubject"
                android:background="@drawable/border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="1dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxBackgroundMode="outline"
                app:helperText="Enter Password Here."
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:textColorHint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:background="@drawable/border"/>

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_border"
                    android:text="Login"
                    android:onClick="login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"></Button>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/not_registerted"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:text="@string/register"
                        android:textColor="@color/green"
                        android:textStyle="bold"
                        android:paddingStart="10dp"></TextView>
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>